--- a/.air.toml
+++ b/.air.toml
@@ -1,23 +1,22 @@
 root = "."
-testdata_dir = "testdata"
-tmp_dir = "tmp"
+tmp_dir = ".dev"
 
 [build]
   args_bin = []
-  bin = "/tmp/main"
-  cmd = "go build -o /tmp/main ."
+  bin = "./.dev/main"
+  cmd = "go build -o ./.dev/main ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = []
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
+  full_bin = "dlv exec --headless --continue --listen :2345 --accept-multiclient --log --log-dest=/app/.dev/devel-debug.log ./.dev/main"
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
   kill_delay = "0s"
-  log = "build-errors.log"
+  log = "/app/logs/build-errors.log"
   poll = true # Polling is slower than fsnotify, but fsnotify is broken on Windows
   poll_interval = 0
   post_cmd = []
