--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ tmp_dir = ".dev"
 
 [build]
   args_bin = []
-  bin = "./.dev/main"
+  bin = "./.dev/main serve"
   cmd = "go build -o ./.dev/main ."
   delay = 1000
   exclude_dir = []
@@ -16,10 +16,10 @@ tmp_dir = ".dev"
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
   kill_delay = "0s"
-  log = "/app/logs/build-errors.log"
+  log = "/app/.dev/build-errors.log"
   poll = true # Polling is slower than fsnotify, but fsnotify is broken on Windows
   poll_interval = 0
-  post_cmd = ["echo Hi"]
+  post_cmd = [""]
   pre_cmd = []
   rerun = false
   rerun_delay = 500
